# che-toolbox

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLI_IMPLEMENTATION.md  CONTRIBUTING.md  END_TO_END_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PERFORMANCE_VALIDATION_REPORT.md  PHASE7_STATUS.md  QUALITY_VALIDATION_REPORT.md  README.md  README_EXAMPLES_VALIDATION.md  mypy.ini  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: lint.yml  test.yml  type-check.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
data/: binary_interaction_params.json  compounds.json  reference_test_cases.json
data/nist_reference/: ethane.json  methane.json  n_butane.json  propane.json  water.json
docs/: API.md  DEVELOPMENT.md  api_reference.md  cli_examples.md  design.md  theory.md  troubleshooting.md  validation_results.md
docs/fluid_calculations/: API.md  CLI.md  USER_GUIDE.md
docs/planning/: che_toolbox_additional.md  che_toolbox_architecture.md  che_toolbox_deployment.md  che_toolbox_plan.md
scripts/: add_compound.py  generate_compound_data.py
specs/000-data-foundations/: data-model.md  quickstart.md  research.md  tasks.md
specs/000-data-foundations/checklists/: requirements.md
specs/000-data-foundations/contracts/: compound_api.py
specs/001-data-foundations/: plan.md  spec.md
specs/001-data-foundations/contracts/: compound_api.py
specs/001-peng-robinson/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-peng-robinson/checklists/: requirements.md
specs/001-peng-robinson/contracts/: cli_interface.md  python_api.md
specs/002-heat-exchanger-calc/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-heat-exchanger-calc/checklists/: requirements.md
specs/002-heat-exchanger-calc/contracts/: cli_interface.md  python_library_api.md
specs/002-steam-properties/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-steam-properties/checklists/: requirements.md
specs/002-steam-properties/contracts/: cli_interface.md  python_api.md
specs/002-thermodynamic-models/: IMPLEMENTATION_SUMMARY.md  PHASE6_COMPLETION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-scenarios.md
specs/002-thermodynamic-models/checklists/: requirements.md
specs/003-fluid-calculations/: plan.md  spec.md  tasks.md
specs/003-fluid-calculations/checklists/: requirements.md
src/: __init__.py
src/cli/: __init__.py  flash_calc.py  ideal_calc.py  pr_calc.py  vdw_calc.py
src/compounds/: __init__.py  database.py  models.py
src/eos/: __init__.py  cubic_solver.py  exceptions.py  flash_pt.py  ideal_gas.py  mixing_rules.py  models.py  peng_robinson.py  units.py  van_der_waals.py
src/fluids/: __init__.py
src/fluids/cli/: __init__.py  main.py  pipe_commands.py  pump_commands.py  valve_commands.py
src/fluids/core/: __init__.py  models.py  validators.py
src/fluids/output/: __init__.py  formatter.py
src/fluids/pipe/: __init__.py  friction.py  pressure_drop.py  reynolds.py
src/fluids/pump/: __init__.py  head.py  npsh.py  power.py
src/fluids/references/: fluids.json  pipes.json  pumps.json  valves.json
src/fluids/valve/: __init__.py  cv.py  performance.py
src/heat_calc/: __init__.py  convection.py  insulation.py  lmtd.py  ntu.py
src/heat_calc/cli/: __init__.py  main.py
src/heat_calc/models/: __init__.py  base.py  convection_input.py  convection_results.py  insulation_input.py  insulation_results.py  lmtd_input.py  lmtd_results.py  ntu_input.py  ntu_results.py
src/heat_calc/utils/: __init__.py  constants.py  validation.py
src/iapws_if97/: __init__.py  constants.py  dispatcher.py  exceptions.py  logging_config.py  models.py  router.py  solver.py  steam_table.py  units.py  utils.py
src/iapws_if97/regions/: __init__.py  region1.py  region2.py  region3.py  saturation.py
src/iapws_if97/validation/: iapws_tables.json
src/iapws_if97_cli/: __init__.py  cli.py
src/validation/: __init__.py  models.py  nist_data.py  reporter.py  validator.py
tests/: conftest.py
tests/benchmark/: benchmark_performance.py
tests/integration/: test_cli.py  test_cli_pipe.py  test_cli_pump.py  test_cli_valve.py  test_complete_workflows.py  test_lmtd_counterflow.json  test_lmtd_crossflow.json  test_lmtd_parallel.json  test_pure_component.py  test_saturation_workflow.py  test_steamtable_api.py  test_steamtable_pt_lookup.py
tests/unit/: test_compounds.py  test_convection.py  test_cubic_solver.py  test_error_messages.py  test_flash_pt.py  test_ideal_gas.py  test_insulation.py  test_integration.py  test_integration_eos.py  test_integration_flash.py  test_lmtd.py  test_mixing_rules.py  test_models.py  test_ntu.py  test_peng_robinson.py  test_pipe_flow.py  test_pump_sizing.py  test_region1_validation.py  test_region2_validation.py  test_region3_validation.py  test_saturation_validation.py  test_valve_sizing.py  test_van_der_waals.py
tests/validation/: accuracy_report.py  test_convection_correlations.py  test_edge_cases.py  test_flash_balance_tests.py  test_insulation_economics.py  test_lmtd_incropera.py  test_nist_pure_components.py  test_ntu_correlations.py  test_pipe_validation.py  test_pump_validation.py  test_singularities.py  test_valve_validation.py  test_vdw_nist_validation.py  validate_all_regions.py
tests/validation/reference_data/: flash_nist.csv  vdw_nist.csv
