[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemeng-toolbox"
version = "0.1.0"
description = "ChemEng Toolbox - Open source chemical engineering calculations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ChE-Toolbox Contributors"}
]
keywords = ["chemical-engineering", "thermodynamics", "calculations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pint>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
pr-calc = "src.cli.pr_calc:main"
vdw-calc = "src.cli.vdw_calc:main"
ideal-calc = "src.cli.ideal_calc:main"
flash-calc = "src.cli.flash_calc:main"

[project.urls]
Homepage = "https://github.com/ChE-Toolbox/che-toolbox"
Documentation = "https://che-toolbox.github.io/che-toolbox"
Repository = "https://github.com/ChE-Toolbox/che-toolbox"
"Bug Tracker" = "https://github.com/ChE-Toolbox/che-toolbox/issues"

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "N", "RUF"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["ARG", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers -ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "validation: NIST validation tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
