[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iapws-if97"
version = "1.0.0"
description = "IAPWS-IF97 steam property calculations library with Python API and CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ChemEng Toolbox", email = "info@chemeng.example"}]
keywords = ["thermodynamics", "steam", "water", "IAPWS", "properties"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pint>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = ["click>=8.1.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.4.0",
]

[project.scripts]
pr-calc = "src.cli.pr_calc:main"
vdw-calc = "src.cli.vdw_calc:main"
ideal-calc = "src.cli.ideal_calc:main"
flash-calc = "src.cli.flash_calc:main"
steam-table = "iapws_if97_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["iapws_if97", "iapws_if97.regions", "iapws_if97_cli"]
package-data = {iapws_if97 = ["validation/*.json"]}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "B", "A", "C4", "T10", "T20", "SIM", "PIE", "PT", "Q"]
ignore = ["S101"]  # Allow assert statements (common in tests)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "validation: IAPWS reference validation tests",
    "slow: Slow running tests",
]
